[package]
edition = "2021"
name = "delag_core"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
tokio = { version = "1.27.0", features = ["full"] }
futures-core = { version = "0.3.17", default-features = false, features = [
  "alloc",
] }
futures-util = { version = "0.3.17", default-features = false, features = [
  "alloc",
] }
hyper = { version = "1.0.0-rc.3", features = ["full"] }
once_cell = { version = "1.16" }
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.12.0", default-features = false, features = [
  "tokio_fs",
  "napi8",
  "tokio_rt",
  "serde-json",
  "async",
  "experimental",
  "latin1",
  "chrono_date",
  "compat-mode",
  "async",
] }
# napi-sys = "2.2.3"
napi-derive = "2.12.2"
serde_json = "1"
http-body-util = "0.1.0-rc.2"
num_cpus = "1.15.0"

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
