[workspace]
members = [".", "crates/*"]

[package]
edition = "2021"
name = "delag"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]


[profile.release]
lto = true

[workspace.dependencies]
tokio = { version = "1.27.0", features = ["full"] }
futures-core = "0.3.17"
futures-util = "0.3.17"
# { version = "0.3.17", default-features = false, features = [
#   "alloc",
# ] }
hyper = "1.0.0-rc.3"
once_cell = "1.16"
serde_json = "1"
http-body-util = "0.1.0-rc.2"
log = "0.4.18"


[dependencies]
num_cpus = "1.15.0"
log = { workspace = true }
hyper = { workspace = true, features = ["full"] }
tokio = { workspace = true }
serde_json = { workspace = true }
once_cell = { workspace = true }
http-body-util = { workspace = true }
napi = { version = "2.12.0", default-features = false, features = [
  "tokio_fs",
  "napi8",
  "tokio_rt",
  "serde-json",
  "async",
  "experimental",
  "latin1",
  "chrono_date",
  "compat-mode",
  "async",
] }
napi-sys = "2.2.3"
napi-derive = "2.12.2"

[build-dependencies]
napi-build = "2.0.1"
