[package]
edition = "2021"
name = "delag"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]


[profile.release]
lto = true

[workspace.dependencies]
tokio = "1.27.0"
futures-core = "0.3.17"
futures-util = "0.3.17"
hyper = "1.0.0-rc.3"
once_cell = "1.16"
serde_json = "1"
http-body-util = "0.1.0-rc.2"
log = "0.4.18"


[dependencies]
num_cpus = "1.15.0"
log = { workspace = true }
futures-core = { workspace = true }
futures-util = { workspace = true }
hyper = { workspace = true, features = ["full"] }
tokio = { workspace = true, features = [
  "macros",
  "net",
  "rt",
  "rt-multi-thread",
  "signal",
  "sync",
  "time",
] }
serde_json = { workspace = true }
once_cell = { workspace = true }
http-body-util = { workspace = true }
napi = { git = "https://github.com/nawbc/napi-rs.git", default-features = false, features = [
  "tokio_fs",
  "napi8",
  "tokio_rt",
  "serde-json",
  "async",
  "experimental",
  "latin1",
  "chrono_date",
  "compat-mode",
  "async",
] }
# napi = { version = "2.13.1", default-features = false, features = [
#   "tokio_fs",
#   "napi8",
#   "tokio_rt",
#   "serde-json",
#   "async",
#   "experimental",
#   "latin1",
#   "chrono_date",
#   "compat-mode",
#   "async",
# ] }
napi-sys = "2.2.3"
napi-derive = "2.13.0"
tokio-rustls = "0.24.0"
rustls-pemfile = "1.0.2"
bytes = "1.4.0"

[build-dependencies]
napi-build = "2.0.1"
